Feature/upload image (#248)

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -24,7 +24,7 @@
   "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
   "ProgramAdminPage.*.approvalHistory": "審核紀錄",
   "ProgramAdminPage.*.basicSettings": "基本設定",
-  "ProgramAdminPage.*.cancel": "取消",
+  "ProgramAdminPage.*.cancel": "Cancel",
   "ProgramAdminPage.*.confirm": "確定",
   "ProgramAdminPage.*.isEnrolledCountVisible": "購買人數",
   "ProgramAdminPage.*.pendingApproval": "審核中",
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "預設",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "建議圖片尺寸：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "手機版",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "縮圖",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "建議圖片尺寸：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "限時方案",
@@ -447,10 +449,6 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
-  "common.category.all": "全部產品",
-  "common.category.specify": "指定產品",
-  "common.category.specifyCouponPlan": "指定折價方案",
-  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "Cancel SubscriptionSuccess",
@@ -517,7 +515,6 @@
   "common.label.currentPosition": "Current position: {position}",
   "common.label.customTitle": "{customTitle}",
   "common.label.date": "Date",
-  "common.label.dateRange": "Date Range",
   "common.label.default": "Default",
   "common.label.description": "Description",
   "common.label.desktop": "Desktop",
@@ -578,14 +575,8 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "Optional",
-  "common.label.orderCategory": "訂單項目",
-  "common.label.orderDiscountId": "Discount ID",
-  "common.label.orderDiscountName": "Discount Name",
-  "common.label.orderDiscountPrice": "Discount Price",
   "common.label.orderDiscountPriceTotal": "Discount Total",
   "common.label.orderDiscountType": "Discount Type",
-  "common.label.orderLogCategory": "Order Category",
-  "common.label.orderLogCreatedDate": "Created Date",
   "common.label.orderLogDate": "Order Date",
   "common.label.orderLogId": "Order ID",
   "common.label.orderLogMemberEmail": "Member Email",
@@ -597,14 +588,11 @@
   "common.label.orderLogUpdatedDate": "Updated Date",
   "common.label.orderProductAmount": "Item Amount",
   "common.label.orderProductAutoRenew": "Auto Renew",
-  "common.label.orderProductId": "Product ID",
   "common.label.orderProductName": "Product Name",
   "common.label.orderProductPrice": "Product Price",
   "common.label.orderProductPriceTotal": "Product Total",
   "common.label.orderProductType": "Product Type",
-  "common.label.orderStatus": "Order Status",
   "common.label.originalPrice": "Original Price",
-  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.ownedCoins": "Owned Coins",
   "common.label.owner": "Founder",
   "common.label.pageTitle": "Page Title",
@@ -676,7 +664,6 @@
   "common.label.tag": "Label",
   "common.label.tags": "tags",
   "common.label.teachingAssistant": "Teaching Assistant",
-  "common.label.timeRange": "Date Range",
   "common.label.timerVisible": "Show countdown timer",
   "common.label.title": "Name",
   "common.label.totalPrice": "Total",
@@ -1656,7 +1643,6 @@
   "merchandise.ui.shippingStoreName": "Shipping Store",
   "merchandiseInventory.label.currentInventory": "Inventory",
   "merchandiseInventory.label.sold": "Sold",
-  "order.label.gift": "贈品項目",
   "order.label.hasPaid": "Paid",
   "order.label.hasRefunded": "Refunded",
   "order.label.invoiceAddress": "Invoice Address",
@@ -1664,43 +1650,17 @@
   "order.label.invoiceDonationCode": "Invoice Donation Code",
   "order.label.invoiceEmail": "Invoice Email",
   "order.label.invoiceId": "Invoice ID",
-  "order.label.invoiceIssuedAt": "Invoice Issued At",
   "order.label.invoiceName": "Invoice Name",
   "order.label.invoicePhone": "Invoice Phone",
-  "order.label.invoiceStatus": "Invoice Status",
   "order.label.invoiceTarget": "Invoice Object",
   "order.label.invoiceUniformNumber": "Invoice UniformNumber",
   "order.label.invoiceUniformTitle": "Invoice Header",
-  "order.label.memberEmail": "Member Email",
-  "order.label.memberName": "Member Name",
-  "order.label.orderCountry": "下單國家",
-  "order.label.orderCreatedAt": "Order created time",
   "order.label.orderDiscountName": "Discount Name",
-  "order.label.orderDiscountTotalPrice": "Total discount",
-  "order.label.orderLogExecutor": "The Undertaker and Profit",
-  "order.label.orderLogId": "Order ID",
   "order.label.orderLogStatus": "Order Status",
-  "order.label.orderLogTotalPrice": "Order Total",
   "order.label.orderLogUpdatedAt": "Order update time",
-  "order.label.orderProductCount": "Total number of items",
-  "order.label.orderProductName": "Item Name",
-  "order.label.orderProductTotalPrice": "Item Total",
   "order.label.paidPrice": "Payment Amount",
-  "order.label.paymentLogDetails": "Payment Method",
-  "order.label.paymentLogGateway": "Transaction Channel",
-  "order.label.paymentLogNo": "Transaction ID",
   "order.label.paymentLogPaidAt": "Payment time",
-  "order.label.productEndedAt": "項目到期時間",
-  "order.label.productOwner": "Creator",
-  "order.label.productPrice": "Item Amount",
-  "order.label.productQuantity": "Item Quantity",
-  "order.label.productType": "Item Category",
-  "order.label.recipientAddress": "收件地址",
-  "order.label.recipientName": "收件人",
-  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "Referrer",
-  "order.label.sharingCode": "Promotion URL",
-  "order.label.sharingNote": "Promotion Note",
   "order.text.modifyOrderStatusDescription": "This operation only changes the status display and controls the user's authority. For actual refund or amount change, please go to the Jinliu platform to operate.",
   "order.ui.modifyOrderStatus": "Change Order Status",
   "page.*.all": "全部",
@@ -2021,9 +1981,18 @@
   "program.ProgramCollectionSelector.sortAsc": "Positive order",
   "program.ProgramCollectionSelector.sortDesc": "Reverse order",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": "Article Content",
+  "program.ProgramContentSectionAdminCard.createContent": "Add Content",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": "Homework Practice",
+  "program.ProgramContentSectionAdminCard.programExercise": "Exercise in class",
+  "program.ProgramContentSectionAdminCard.videoContent": "Video Content",
   "program.ProgramPackageSelector.allProgramPackage": "全部課程組合",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "invisible",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Participants visible",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2003,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "Participants visible",
   "program.ProgramPlanAdminModal.visible": "visible",
-  "program.ProgramPlanAdminModal.invisible": "invisible",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
   "program.label.allowMultipleAnswers": "Allow multiple correct answers",
@@ -2130,28 +2097,26 @@
   "program.text.unfinishedQuestions": "Unfinished content: {questions}",
   "program.text.uploadVideo": "Upload Video",
   "program.text.videoPlaceholder": "video url",
+  "program.ui.articleContent": "Article content",
   "program.ui.checkProgramContent": "Check program content",
   "program.ui.chooseFile": "Choose File",
-  "program.ui.videoContent": "Video content",
-  "program.ui.articleContent": "Article content",
-  "program.ProgramContentSectionAdminCard.createContent": "Add Content",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Add option",
   "program.ui.createExerciseQuestion": "Add Question",
   "program.ui.delete": "Delete file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Delete Content",
   "program.ui.deleteQuestion": "Delete Question",
-  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Enable",
   "program.ui.delivery": "Delivery Course",
   "program.ui.difficulty": "Difficulty",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Manage Captions",
-  "program.ProgramContentSectionAdminCard.practiceContent": "Homework Practice",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Preview",
-  "program.ProgramContentSectionAdminCard.videoContent": "Video Content",
-  "program.ProgramContentSectionAdminCard.articleContent": "Article Content",
-  "program.ProgramContentSectionAdminCard.programExercise": "Exercise in class",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Reupload",
   "program.ui.sortContents": "Sort Contents",
   "program.ui.sortProgram": "Sort Program",
@@ -2161,6 +2126,7 @@
   "program.ui.uploadMaterial": "Upload Material",
   "program.ui.uploadVideo": "Upload Video",
   "program.ui.uploadedCaptions": "Uploaded Captions",
+  "program.ui.videoContent": "Video content",
   "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
@@ -2213,6 +2179,8 @@
   "project.*.sortProjectPlan": "Project Sort",
   "project.*.sponsor": "Sponsor",
   "project.*.unnamedProject": "Unnamed Project",
+  "project.ProgramPackageBasicFrom.notUploaded": "*尚未上傳",
+  "project.ProgramPackageBasicFrom.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectAdminPage.deletePortfolio": "Delete portfolio",
   "project.ProjectAdminPage.portfolioContent": "Portfolio content",
   "project.ProjectAdminPage.portfolioDescription": "Portfolio description",
@@ -2224,9 +2192,21 @@
   "project.ProjectCollectionTable.author": "Author",
   "project.ProjectCollectionTable.mark": "Mark",
   "project.ProjectCollectionTable.title": "Title",
+  "project.ProjectIntroForm.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
+  "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
+  "project.ProjectIntroForm.notUploaded": "*尚未上傳",
+  "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectPlanAdminModal.deliverables": "Project Deliverables",
+  "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
+  "project.ProjectPlanAdminModal.isPublished": "是否開賣",
+  "project.ProjectPlanAdminModal.notUploaded": "*尚未上傳",
+  "project.ProjectPlanAdminModal.planDescription": "方案描述",
+  "project.ProjectPlanAdminModal.published": "發售，專案上架後立即開賣",
+  "project.ProjectPlanAdminModal.saveProjectPlan": "儲存方案",
+  "project.ProjectPlanAdminModal.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectPlanAdminModal.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
   "project.ProjectPlanCard.sku": "SKU",
@@ -2378,6 +2358,19 @@
   "questionLibrary.ui.isAnswer": "This is the correct answer",
   "questionLibrary.ui.sortQuestions": "Sort Questions",
   "questionLibrary.ui.useZhuYinFont": "Use Zhuyin Font",
+  "sale.*.activityTicket": "活動票券",
+  "sale.*.appointmentPlan": "預約",
+  "sale.*.cancel": "取消",
+  "sale.*.card": "會員卡",
+  "sale.*.isRequired": "請輸入{field}",
+  "sale.*.merchandiseSpec": "商品規格",
+  "sale.*.podcastPlan": "廣播頻道",
+  "sale.*.podcastProgram": "廣播",
+  "sale.*.program": "單次課程",
+  "sale.*.programContent": "課程內容",
+  "sale.*.programPackagePlan": "課程組合",
+  "sale.*.programPlan": "課程方案",
+  "sale.*.projectPlan": "專案方案",
   "sale.InvoiceCard.donationCode": "發票捐贈碼",
   "sale.InvoiceCard.invoiceAddress": "發票地址",
   "sale.InvoiceCard.invoiceCarrier": "發票載具",
@@ -2388,7 +2381,7 @@
   "sale.InvoiceCard.invoiceNumber": "發票編號",
   "sale.InvoiceCard.invoicePending": "未開立電子發票",
   "sale.InvoiceCard.invoicePhone": "發票電話",
-  "sale.InvoiceCard.invoiceStatus": "發票狀態",
+  "sale.InvoiceCard.invoiceStatus": "Invoice Status",
   "sale.InvoiceCard.invoiceSuccess": "開立成功",
   "sale.InvoiceCard.invoiceTarget": "發票對象",
   "sale.InvoiceCard.uniformNumber": "發票統編",
@@ -2404,6 +2397,81 @@
   "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
   "sale.OrderDetailDrawer.otherInfo": "其他資訊",
   "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderExportModal.all": "全部產品",
+  "sale.OrderExportModal.dateRange": "Date Range",
+  "sale.OrderExportModal.exportOrder": "匯出資料",
+  "sale.OrderExportModal.exportOrderDiscount": "折扣明細",
+  "sale.OrderExportModal.exportOrderLog": "匯出總表",
+  "sale.OrderExportModal.exportOrderProduct": "訂單明細",
+  "sale.OrderExportModal.exportPaymentLog": "交易明細",
+  "sale.OrderExportModal.gift": "贈品項目",
+  "sale.OrderExportModal.invoiceAddress": "發票地址",
+  "sale.OrderExportModal.invoiceCarrier": "發票載具",
+  "sale.OrderExportModal.invoiceDonationCode": "發票捐贈碼",
+  "sale.OrderExportModal.invoiceEmail": "發票信箱",
+  "sale.OrderExportModal.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.OrderExportModal.invoiceId": "發票編號",
+  "sale.OrderExportModal.invoiceIssuedAt": "Invoice Issued At",
+  "sale.OrderExportModal.invoiceName": "發票姓名",
+  "sale.OrderExportModal.invoicePending": "未開立電子發票",
+  "sale.OrderExportModal.invoicePhone": "發票電話",
+  "sale.OrderExportModal.invoiceStatus": "Invoice Status",
+  "sale.OrderExportModal.invoiceSuccess": "開立成功",
+  "sale.OrderExportModal.invoiceTarget": "發票對象",
+  "sale.OrderExportModal.invoiceUniformNumber": "發票統編",
+  "sale.OrderExportModal.invoiceUniformTitle": "發票抬頭",
+  "sale.OrderExportModal.memberEmail": "Member Email",
+  "sale.OrderExportModal.memberName": "Member Name",
+  "sale.OrderExportModal.no": "否",
+  "sale.OrderExportModal.orderCategory": "訂單項目",
+  "sale.OrderExportModal.orderCountry": "下單國家",
+  "sale.OrderExportModal.orderCreatedAt": "Order created time",
+  "sale.OrderExportModal.orderDeleted": "已刪除",
+  "sale.OrderExportModal.orderDiscountId": "Discount ID",
+  "sale.OrderExportModal.orderDiscountName": "Discount Name",
+  "sale.OrderExportModal.orderDiscountPrice": "Discount Price",
+  "sale.OrderExportModal.orderDiscountTotalPrice": "Total discount",
+  "sale.OrderExportModal.orderExpired": "已失效",
+  "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCreatedDate": "Created Date",
+  "sale.OrderExportModal.orderLogExecutor": "The Undertaker and Profit",
+  "sale.OrderExportModal.orderLogId": "Order ID",
+  "sale.OrderExportModal.orderLogPaymentDate": "付款日期",
+  "sale.OrderExportModal.orderLogStatus": "訂單狀態",
+  "sale.OrderExportModal.orderLogTotalPrice": "Order Total",
+  "sale.OrderExportModal.orderPartialPaid": "部分付款",
+  "sale.OrderExportModal.orderPartialRefund": "部分退款",
+  "sale.OrderExportModal.orderPaying": "付款中",
+  "sale.OrderExportModal.orderProductCount": "Total number of items",
+  "sale.OrderExportModal.orderProductId": "Product ID",
+  "sale.OrderExportModal.orderProductName": "Item Name",
+  "sale.OrderExportModal.orderProductTotalPrice": "Item Total",
+  "sale.OrderExportModal.orderRefund": "已退款",
+  "sale.OrderExportModal.orderStatus": "Order Status",
+  "sale.OrderExportModal.orderSuccess": "已完成",
+  "sale.OrderExportModal.orderUnpaid": "待付款",
+  "sale.OrderExportModal.otherSpecifyCategories": "Other Specify Categories",
+  "sale.OrderExportModal.paymentLogDetails": "Payment Method",
+  "sale.OrderExportModal.paymentLogGateway": "Transaction Channel",
+  "sale.OrderExportModal.paymentLogNo": "Transaction ID",
+  "sale.OrderExportModal.paymentLogPaidAt": "付款時間",
+  "sale.OrderExportModal.productEndedAt": "項目到期時間",
+  "sale.OrderExportModal.productOwner": "Creator",
+  "sale.OrderExportModal.productPrice": "Item Amount",
+  "sale.OrderExportModal.productQuantity": "Item Quantity",
+  "sale.OrderExportModal.productType": "Item Category",
+  "sale.OrderExportModal.recipientAddress": "收件地址",
+  "sale.OrderExportModal.recipientName": "收件人",
+  "sale.OrderExportModal.recipientPhone": "收件電話",
+  "sale.OrderExportModal.send": "寄送",
+  "sale.OrderExportModal.sharingCode": "Promotion URL",
+  "sale.OrderExportModal.sharingNote": "Promotion Note",
+  "sale.OrderExportModal.specify": "指定產品",
+  "sale.OrderExportModal.specifyCouponPlan": "指定折價方案",
+  "sale.OrderExportModal.specifyVoucherPlan": "指定兌換方案",
+  "sale.OrderExportModal.timeRange": "Date Range",
+  "sale.OrderExportModal.unknownType": "未知",
+  "sale.OrderExportModal.yes": "是",
   "sale.OrderOtherInfoCard.country": "國家",
   "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
   "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
@@ -2418,7 +2486,6 @@
   "sale.PaymentCard.paymentNo": "交易編號",
   "sale.PaymentCard.paymentStatus": "交易狀態",
   "sale.PaymentCard.price": "金額",
-  "sale.SaleCollectionAdminCard.cancel": "Cancel",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": "Open",
   "sale.SaleCollectionAdminCard.openEquity": "Open Equity",
@@ -2471,7 +2538,7 @@
   "upload.event.uploading": "Uploading",
   "upload.label.retry": "Retry",
   "upload.label.uploadFile": "Upload File",
-  "voucher.*.cancel": "取消",
+  "voucher.*.cancel": "Cancel",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
