--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "预设",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "建议图片尺寸：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "手机版",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "缩图",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "建议图片尺寸：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "限时方案",
@@ -447,10 +449,6 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
-  "common.category.all": "全部產品",
-  "common.category.specify": "指定產品",
-  "common.category.specifyCouponPlan": "指定折價方案",
-  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "取消订阅成功",
@@ -517,7 +515,6 @@
   "common.label.currentPosition": "目前排序：{position}",
   "common.label.customTitle": "{customTitle}",
   "common.label.date": "日期",
-  "common.label.dateRange": "日期范围",
   "common.label.default": "预设",
   "common.label.description": "描述",
   "common.label.desktop": "电脑版",
@@ -578,14 +575,8 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "非必填",
-  "common.label.orderCategory": "訂單項目",
-  "common.label.orderDiscountId": "折扣编号",
-  "common.label.orderDiscountName": "折扣名称",
-  "common.label.orderDiscountPrice": "折扣金额",
   "common.label.orderDiscountPriceTotal": "折扣总额",
   "common.label.orderDiscountType": "折扣类别",
-  "common.label.orderLogCategory": "訂單項目",
-  "common.label.orderLogCreatedDate": "建立日期",
   "common.label.orderLogDate": "订单日期",
   "common.label.orderLogId": "订单编号",
   "common.label.orderLogMemberEmail": "会员信箱",
@@ -597,14 +588,11 @@
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "项目数量",
   "common.label.orderProductAutoRenew": "自动续订",
-  "common.label.orderProductId": "项目编号",
   "common.label.orderProductName": "项目名称",
   "common.label.orderProductPrice": "项目金额",
   "common.label.orderProductPriceTotal": "项目总额",
   "common.label.orderProductType": "项目种类",
-  "common.label.orderStatus": "订单状态",
   "common.label.originalPrice": "原价",
-  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.ownedCoins": "持有代币",
   "common.label.owner": "建立者",
   "common.label.pageTitle": "Page Title",
@@ -676,7 +664,6 @@
   "common.label.tag": "标签",
   "common.label.tags": "标签",
   "common.label.teachingAssistant": "助教",
-  "common.label.timeRange": "日期范围",
   "common.label.timerVisible": "显示倒数计时器",
   "common.label.title": "名称",
   "common.label.totalPrice": "总金额",
@@ -1656,7 +1643,6 @@
   "merchandise.ui.shippingStoreName": "收件门市",
   "merchandiseInventory.label.currentInventory": "库存",
   "merchandiseInventory.label.sold": "已售",
-  "order.label.gift": "贈品項目",
   "order.label.hasPaid": "已支付",
   "order.label.hasRefunded": "已退款",
   "order.label.invoiceAddress": "发票地址",
@@ -1664,43 +1650,17 @@
   "order.label.invoiceDonationCode": "发票捐赠码",
   "order.label.invoiceEmail": "发票信箱",
   "order.label.invoiceId": "发票编号",
-  "order.label.invoiceIssuedAt": "发票开立时间",
   "order.label.invoiceName": "发票姓名",
   "order.label.invoicePhone": "发票电话",
-  "order.label.invoiceStatus": "发票状态",
   "order.label.invoiceTarget": "发票对象",
   "order.label.invoiceUniformNumber": "发票统编",
   "order.label.invoiceUniformTitle": "发票抬头",
-  "order.label.memberEmail": "会员信箱",
-  "order.label.memberName": "会员姓名",
-  "order.label.orderCountry": "下單國家",
-  "order.label.orderCreatedAt": "订单建立时间",
   "order.label.orderDiscountName": "折扣名称",
-  "order.label.orderDiscountTotalPrice": "折扣总额",
-  "order.label.orderLogExecutor": "承办人与分润",
-  "order.label.orderLogId": "订单编号",
   "order.label.orderLogStatus": "订单状态",
-  "order.label.orderLogTotalPrice": "订单总额",
   "order.label.orderLogUpdatedAt": "订单更新时间",
-  "order.label.orderProductCount": "项目总数",
-  "order.label.orderProductName": "项目名称",
-  "order.label.orderProductTotalPrice": "项目总额",
   "order.label.paidPrice": "支付金额",
-  "order.label.paymentLogDetails": "付款方式",
-  "order.label.paymentLogGateway": "交易渠道",
-  "order.label.paymentLogNo": "交易编号",
   "order.label.paymentLogPaidAt": "付款时间",
-  "order.label.productEndedAt": "項目到期時間",
-  "order.label.productOwner": "创作者",
-  "order.label.productPrice": "项目金额",
-  "order.label.productQuantity": "项目数量",
-  "order.label.productType": "项目类别",
-  "order.label.recipientAddress": "收件地址",
-  "order.label.recipientName": "收件人",
-  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "推荐人",
-  "order.label.sharingCode": "推广网址",
-  "order.label.sharingNote": "推广备注",
   "order.text.modifyOrderStatusDescription": "此操作仅更改状态显示并控制使用者权限，实际退款或金额异动请到金流平台操作。",
   "order.ui.modifyOrderStatus": "变更订单状态",
   "page.*.all": "全部",
@@ -2021,9 +1981,18 @@
   "program.ProgramCollectionSelector.sortAsc": "正序",
   "program.ProgramCollectionSelector.sortDesc": "倒序",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": "图文内容",
+  "program.ProgramContentSectionAdminCard.createContent": "新增内容",
+  "program.ProgramContentSectionAdminCard.deleteSection": "删除区块",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": "作业练习",
+  "program.ProgramContentSectionAdminCard.programExercise": "随堂测验",
+  "program.ProgramContentSectionAdminCard.videoContent": "视频内容",
   "program.ProgramPackageSelector.allProgramPackage": "全部课程组合",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "隐藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "购买人数",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2003,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "购买人数",
   "program.ProgramPlanAdminModal.visible": "显示",
-  "program.ProgramPlanAdminModal.invisible": "隐藏",
   "program.event.editIssueFailed": "无法更改问题",
   "program.label.allProgram": "全部课程",
   "program.label.allowMultipleAnswers": "允许多个正确解答",
@@ -2130,28 +2097,26 @@
   "program.text.unfinishedQuestions": "未完成内容：{questions}",
   "program.text.uploadVideo": "上传影片",
   "program.text.videoPlaceholder": "贴上影片网址",
+  "program.ui.articleContent": "图文内容",
   "program.ui.checkProgramContent": "查看课程内容",
   "program.ui.chooseFile": "选择档案",
-  "program.ui.videoContent": "视频内容",
-  "program.ui.articleContent": "图文内容",
-  "program.ProgramContentSectionAdminCard.createContent": "新增内容",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增选项",
   "program.ui.createExerciseQuestion": "新增题目",
   "program.ui.delete": "删除档案",
   "program.ui.deleteChoice": "删除选项",
   "program.ui.deleteContent": "删除内容",
   "program.ui.deleteQuestion": "删除题目",
-  "program.ProgramContentSectionAdminCard.deleteSection": "删除区块",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "启用",
   "program.ui.delivery": "交付课程",
   "program.ui.difficulty": "难易度",
   "program.ui.editProgram": "编辑课程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ProgramContentSectionAdminCard.practiceContent": "作业练习",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "预览",
-  "program.ProgramContentSectionAdminCard.videoContent": "视频内容",
-  "program.ProgramContentSectionAdminCard.articleContent": "图文内容",
-  "program.ProgramContentSectionAdminCard.programExercise": "随堂测验",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上传",
   "program.ui.sortContents": "排序内容",
   "program.ui.sortProgram": "课程排序",
@@ -2161,6 +2126,7 @@
   "program.ui.uploadMaterial": "上传教材",
   "program.ui.uploadVideo": "上传影片",
   "program.ui.uploadedCaptions": "已上传字幕",
+  "program.ui.videoContent": "视频内容",
   "programPackage.ProgramPackageBasicFrom.tag": "标签",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
@@ -2213,6 +2179,8 @@
   "project.*.sortProjectPlan": "方案排序",
   "project.*.sponsor": "发起者",
   "project.*.unnamedProject": "未命名专案",
+  "project.ProgramPackageBasicFrom.notUploaded": "*尚未上傳",
+  "project.ProgramPackageBasicFrom.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectAdminPage.deletePortfolio": "Delete portfolio",
   "project.ProjectAdminPage.portfolioContent": "Portfolio content",
   "project.ProjectAdminPage.portfolioDescription": "Portfolio description",
@@ -2224,9 +2192,21 @@
   "project.ProjectCollectionTable.author": "Author",
   "project.ProjectCollectionTable.mark": "Mark",
   "project.ProjectCollectionTable.title": "Title",
+  "project.ProjectIntroForm.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
+  "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
+  "project.ProjectIntroForm.notUploaded": "*尚未上傳",
+  "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectPlanAdminModal.deliverables": "交付项目",
+  "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
+  "project.ProjectPlanAdminModal.isPublished": "是否開賣",
+  "project.ProjectPlanAdminModal.notUploaded": "*尚未上傳",
+  "project.ProjectPlanAdminModal.planDescription": "方案描述",
+  "project.ProjectPlanAdminModal.published": "發售，專案上架後立即開賣",
+  "project.ProjectPlanAdminModal.saveProjectPlan": "儲存方案",
+  "project.ProjectPlanAdminModal.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectPlanAdminModal.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "发售中",
   "project.ProjectPlanCard.sku": "SKU",
@@ -2378,6 +2358,19 @@
   "questionLibrary.ui.isAnswer": "此为正确解答",
   "questionLibrary.ui.sortQuestions": "排序题目",
   "questionLibrary.ui.useZhuYinFont": "使用注音字形",
+  "sale.*.activityTicket": "活動票券",
+  "sale.*.appointmentPlan": "預約",
+  "sale.*.cancel": "取消",
+  "sale.*.card": "會員卡",
+  "sale.*.isRequired": "請輸入{field}",
+  "sale.*.merchandiseSpec": "商品規格",
+  "sale.*.podcastPlan": "廣播頻道",
+  "sale.*.podcastProgram": "廣播",
+  "sale.*.program": "單次課程",
+  "sale.*.programContent": "課程內容",
+  "sale.*.programPackagePlan": "課程組合",
+  "sale.*.programPlan": "課程方案",
+  "sale.*.projectPlan": "專案方案",
   "sale.InvoiceCard.donationCode": "發票捐贈碼",
   "sale.InvoiceCard.invoiceAddress": "發票地址",
   "sale.InvoiceCard.invoiceCarrier": "發票載具",
@@ -2404,6 +2397,81 @@
   "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
   "sale.OrderDetailDrawer.otherInfo": "其他資訊",
   "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderExportModal.all": "全部產品",
+  "sale.OrderExportModal.dateRange": "日期範圍",
+  "sale.OrderExportModal.exportOrder": "匯出資料",
+  "sale.OrderExportModal.exportOrderDiscount": "折扣明細",
+  "sale.OrderExportModal.exportOrderLog": "匯出總表",
+  "sale.OrderExportModal.exportOrderProduct": "訂單明細",
+  "sale.OrderExportModal.exportPaymentLog": "交易明細",
+  "sale.OrderExportModal.gift": "贈品項目",
+  "sale.OrderExportModal.invoiceAddress": "發票地址",
+  "sale.OrderExportModal.invoiceCarrier": "發票載具",
+  "sale.OrderExportModal.invoiceDonationCode": "發票捐贈碼",
+  "sale.OrderExportModal.invoiceEmail": "發票信箱",
+  "sale.OrderExportModal.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.OrderExportModal.invoiceId": "發票編號",
+  "sale.OrderExportModal.invoiceIssuedAt": "發票開立時間",
+  "sale.OrderExportModal.invoiceName": "發票姓名",
+  "sale.OrderExportModal.invoicePending": "未開立電子發票",
+  "sale.OrderExportModal.invoicePhone": "發票電話",
+  "sale.OrderExportModal.invoiceStatus": "發票狀態",
+  "sale.OrderExportModal.invoiceSuccess": "開立成功",
+  "sale.OrderExportModal.invoiceTarget": "發票對象",
+  "sale.OrderExportModal.invoiceUniformNumber": "發票統編",
+  "sale.OrderExportModal.invoiceUniformTitle": "發票抬頭",
+  "sale.OrderExportModal.memberEmail": "會員信箱",
+  "sale.OrderExportModal.memberName": "會員姓名",
+  "sale.OrderExportModal.no": "否",
+  "sale.OrderExportModal.orderCategory": "訂單項目",
+  "sale.OrderExportModal.orderCountry": "下單國家",
+  "sale.OrderExportModal.orderCreatedAt": "訂單建立時間",
+  "sale.OrderExportModal.orderDeleted": "已刪除",
+  "sale.OrderExportModal.orderDiscountId": "折扣編號",
+  "sale.OrderExportModal.orderDiscountName": "折扣名稱",
+  "sale.OrderExportModal.orderDiscountPrice": "折扣金額",
+  "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
+  "sale.OrderExportModal.orderExpired": "已失效",
+  "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
+  "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
+  "sale.OrderExportModal.orderLogId": "訂單編號",
+  "sale.OrderExportModal.orderLogPaymentDate": "付款日期",
+  "sale.OrderExportModal.orderLogStatus": "訂單狀態",
+  "sale.OrderExportModal.orderLogTotalPrice": "訂單總額",
+  "sale.OrderExportModal.orderPartialPaid": "部分付款",
+  "sale.OrderExportModal.orderPartialRefund": "部分退款",
+  "sale.OrderExportModal.orderPaying": "付款中",
+  "sale.OrderExportModal.orderProductCount": "項目總數",
+  "sale.OrderExportModal.orderProductId": "項目編號",
+  "sale.OrderExportModal.orderProductName": "項目名稱",
+  "sale.OrderExportModal.orderProductTotalPrice": "項目總額",
+  "sale.OrderExportModal.orderRefund": "已退款",
+  "sale.OrderExportModal.orderStatus": "訂單狀態",
+  "sale.OrderExportModal.orderSuccess": "已完成",
+  "sale.OrderExportModal.orderUnpaid": "待付款",
+  "sale.OrderExportModal.otherSpecifyCategories": "其他特定項目",
+  "sale.OrderExportModal.paymentLogDetails": "付款方式",
+  "sale.OrderExportModal.paymentLogGateway": "交易渠道",
+  "sale.OrderExportModal.paymentLogNo": "交易編號",
+  "sale.OrderExportModal.paymentLogPaidAt": "付款時間",
+  "sale.OrderExportModal.productEndedAt": "項目到期時間",
+  "sale.OrderExportModal.productOwner": "創作者",
+  "sale.OrderExportModal.productPrice": "項目金額",
+  "sale.OrderExportModal.productQuantity": "項目數量",
+  "sale.OrderExportModal.productType": "項目類別",
+  "sale.OrderExportModal.recipientAddress": "收件地址",
+  "sale.OrderExportModal.recipientName": "收件人",
+  "sale.OrderExportModal.recipientPhone": "收件電話",
+  "sale.OrderExportModal.send": "寄送",
+  "sale.OrderExportModal.sharingCode": "推廣網址",
+  "sale.OrderExportModal.sharingNote": "推廣備註",
+  "sale.OrderExportModal.specify": "指定產品",
+  "sale.OrderExportModal.specifyCouponPlan": "指定折價方案",
+  "sale.OrderExportModal.specifyVoucherPlan": "指定兌換方案",
+  "sale.OrderExportModal.timeRange": "日期範圍",
+  "sale.OrderExportModal.unknownType": "未知",
+  "sale.OrderExportModal.yes": "是",
   "sale.OrderOtherInfoCard.country": "國家",
   "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
   "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
@@ -2418,7 +2486,6 @@
   "sale.PaymentCard.paymentNo": "交易編號",
   "sale.PaymentCard.paymentStatus": "交易狀態",
   "sale.PaymentCard.price": "金額",
-  "sale.SaleCollectionAdminCard.cancel": "取消",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": "开通",
   "sale.SaleCollectionAdminCard.openEquity": "开通权益",
