--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "Đặt trước",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "Kích thước hình ảnh được đề xuất：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "Phiên bản điện thoại",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "Rút lại",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "Kích thước hình ảnh được đề xuất：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "Thời gian giới hạn",
@@ -447,10 +449,6 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
-  "common.category.all": "全部產品",
-  "common.category.specify": "指定產品",
-  "common.category.specifyCouponPlan": "指定折價方案",
-  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": " Hủy đăng ký ",
@@ -517,7 +515,6 @@
   "common.label.currentPosition": " Vị trí hiện tại: {position}",
   "common.label.customTitle": "{customTitle}",
   "common.label.date": " Ngày ",
-  "common.label.dateRange": "Phạm vi Ngày",
   "common.label.default": " Mặc định ",
   "common.label.description": " Mô tả ",
   "common.label.desktop": "Máy tính để bàn ",
@@ -578,14 +575,8 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "Tùy chọn",
-  "common.label.orderCategory": "訂單項目",
-  "common.label.orderDiscountId": "ID giảm giá",
-  "common.label.orderDiscountName": "Tên Giảm giá",
-  "common.label.orderDiscountPrice": "Giá Giảm",
   "common.label.orderDiscountPriceTotal": "Tổng chiết khấu",
   "common.label.orderDiscountType": "Loại giảm giá",
-  "common.label.orderLogCategory": "Order Category",
-  "common.label.orderLogCreatedDate": "Ngày thành lập",
   "common.label.orderLogDate": "Ngày đặt hàng",
   "common.label.orderLogId": "ID đặt hàng",
   "common.label.orderLogMemberEmail": "Email Thành viên",
@@ -597,14 +588,11 @@
   "common.label.orderLogUpdatedDate": " Ngày cập nhật ",
   "common.label.orderProductAmount": " Số lượng mặt hàng ",
   "common.label.orderProductAutoRenew": "Tự động gia hạn",
-  "common.label.orderProductId": "ID Sản phẩm",
   "common.label.orderProductName": "Tên sản phẩm",
   "common.label.orderProductPrice": "Giá sản phẩm",
   "common.label.orderProductPriceTotal": "Tổng sản phẩm",
   "common.label.orderProductType": "Loại sản phẩm",
-  "common.label.orderStatus": " Trạng thái Đơn hàng ",
   "common.label.originalPrice": " Giá gốc ",
-  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.ownedCoins": "Số tiền sở hữu ",
   "common.label.owner": " Người sáng lập ",
   "common.label.pageTitle": "Page Title",
@@ -676,7 +664,6 @@
   "common.label.tag": " Nhãn ",
   "common.label.tags": " thẻ ",
   "common.label.teachingAssistant": " Trợ lý giảng dạy ",
-  "common.label.timeRange": " Phạm vi Ngày ",
   "common.label.timerVisible": "Hiển thị bộ đếm thời gian đếm ngược",
   "common.label.title": " Tên ",
   "common.label.totalPrice": "Tổng cộng",
@@ -1656,7 +1643,6 @@
   "merchandise.ui.shippingStoreName": "Nhận cửa hàng",
   "merchandiseInventory.label.currentInventory": "trong kho",
   "merchandiseInventory.label.sold": "Doanh thu",
-  "order.label.gift": "贈品項目",
   "order.label.hasPaid": " Trả phí ",
   "order.label.hasRefunded": "Đã hoàn lại ",
   "order.label.invoiceAddress": " Địa chỉ hóa đơn ",
@@ -1664,43 +1650,17 @@
   "order.label.invoiceDonationCode": " Mã đóng góp hóa đơn ",
   "order.label.invoiceEmail": " Email hóa đơn ",
   "order.label.invoiceId": " ID hóa đơn ",
-  "order.label.invoiceIssuedAt": "Thời gian phát hành hóa đơn",
   "order.label.invoiceName": " Tên hóa đơn ",
   "order.label.invoicePhone": " Invoice Phone ",
-  "order.label.invoiceStatus": " Trạng thái hóa đơn ",
   "order.label.invoiceTarget": " Đối tượng Hóa đơn ",
   "order.label.invoiceUniformNumber": " Invoice UniformNumber ",
   "order.label.invoiceUniformTitle": " Tiêu đề hóa đơn ",
-  "order.label.memberEmail": " Email Thành viên ",
-  "order.label.memberName": " Tên Thành viên ",
-  "order.label.orderCountry": "下單國家",
-  "order.label.orderCreatedAt": "Thời gian thành lập đơn đặt hàng",
   "order.label.orderDiscountName": " Tên Giảm giá ",
-  "order.label.orderDiscountTotalPrice": " Tổng chiết khấu ",
-  "order.label.orderLogExecutor": "Người bán chui và lợi nhuận ",
-  "order.label.orderLogId": " ID đặt hàng ",
   "order.label.orderLogStatus": " Trạng thái Đơn hàng ",
-  "order.label.orderLogTotalPrice": " Tổng đơn hàng ",
   "order.label.orderLogUpdatedAt": " Thời gian cập nhật đơn đặt hàng ",
-  "order.label.orderProductCount": " Tổng số mặt hàng ",
-  "order.label.orderProductName": " Tên mặt hàng ",
-  "order.label.orderProductTotalPrice": " Tổng số mặt hàng ",
   "order.label.paidPrice": " Số tiền thanh toán ",
-  "order.label.paymentLogDetails": " Phương thức Thanh toán ",
-  "order.label.paymentLogGateway": " Kênh giao dịch ",
-  "order.label.paymentLogNo": " ID giao dịch ",
   "order.label.paymentLogPaidAt": " Thời gian thanh toán ",
-  "order.label.productEndedAt": "項目到期時間",
-  "order.label.productOwner": " Người tạo ",
-  "order.label.productPrice": " Số lượng mặt hàng ",
-  "order.label.productQuantity": " Số lượng mặt hàng ",
-  "order.label.productType": " Danh mục mặt hàng ",
-  "order.label.recipientAddress": "收件地址",
-  "order.label.recipientName": "收件人",
-  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "Liên kết giới thiệu ",
-  "order.label.sharingCode": " URL quảng cáo ",
-  "order.label.sharingNote": " Ghi chú Khuyến mại ",
   "order.text.modifyOrderStatusDescription": " Thao tác này chỉ thay đổi hiển thị trạng thái và kiểm soát quyền hạn của người dùng. Để hoàn lại tiền hoặc thay đổi số tiền thực tế, vui lòng chuyển đến nền tảng Jinliu để hoạt động. ",
   "order.ui.modifyOrderStatus": " Thay đổi Trạng thái Đơn hàng ",
   "page.*.all": "tất cả các",
@@ -2021,9 +1981,18 @@
   "program.ProgramCollectionSelector.sortAsc": " Thứ tự tích cực ",
   "program.ProgramCollectionSelector.sortDesc": " Đảo ngược thứ tự ",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": " Nội dung bài viết",
+  "program.ProgramContentSectionAdminCard.createContent": "Thêm nội dung",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": " Thực hành Bài tập về nhà ",
+  "program.ProgramContentSectionAdminCard.programExercise": " Bài tập trong lớp ",
+  "program.ProgramContentSectionAdminCard.videoContent": " Nội dung video",
   "program.ProgramPackageSelector.allProgramPackage": "Tất cả các khóa học",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "vô hình",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Người tham gia có thể nhìn thấy",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2003,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "Người tham gia có thể nhìn thấy",
   "program.ProgramPlanAdminModal.visible": "có thể nhìn thấy",
-  "program.ProgramPlanAdminModal.invisible": "vô hình",
   "program.event.editIssueFailed": "Chỉnh sửa sự cố không thành công",
   "program.label.allProgram": "Tất cả chương trình",
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
@@ -2130,28 +2097,26 @@
   "program.text.unfinishedQuestions": "Nội dung bất ngờ:{questions}",
   "program.text.uploadVideo": " Tải lên Video ",
   "program.text.videoPlaceholder": "url video",
+  "program.ui.articleContent": "Nội dung bài viết",
   "program.ui.checkProgramContent": "Kiểm tra nội dung chương trình",
   "program.ui.chooseFile": " Chọn tệp ",
-  "program.ui.videoContent": "Nội dung video",
-  "program.ui.articleContent": "Nội dung bài viết",
-  "program.ProgramContentSectionAdminCard.createContent": "Thêm nội dung",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": " Thêm tùy chọn ",
   "program.ui.createExerciseQuestion": " Thêm câu hỏi ",
   "program.ui.delete": " Xóa tệp ",
   "program.ui.deleteChoice": "DeleteChoice ",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteQuestion": " Xóa câu hỏi ",
-  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": " Bật ",
   "program.ui.delivery": " Khóa học Giao hàng ",
   "program.ui.difficulty": " Khó khăn ",
   "program.ui.editProgram": " Chỉnh sửa chương trình ",
   "program.ui.manageCaption": " Quản lý Phụ đề ",
-  "program.ProgramContentSectionAdminCard.practiceContent": " Thực hành Bài tập về nhà ",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": " Xem trước ",
-  "program.ProgramContentSectionAdminCard.videoContent": " Nội dung video",
-  "program.ProgramContentSectionAdminCard.articleContent": " Nội dung bài viết",
-  "program.ProgramContentSectionAdminCard.programExercise": " Bài tập trong lớp ",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Tải lại ",
   "program.ui.sortContents": " Sắp xếp nội dung ",
   "program.ui.sortProgram": "Sắp xếp chương trình",
@@ -2161,6 +2126,7 @@
   "program.ui.uploadMaterial": " Tải lên tài liệu ",
   "program.ui.uploadVideo": "Tải lên Video",
   "program.ui.uploadedCaptions": " Phụ đề đã Tải lên ",
+  "program.ui.videoContent": "Nội dung video",
   "programPackage.ProgramPackageBasicFrom.tag": "Nhãn mác",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
@@ -2213,6 +2179,8 @@
   "project.*.sortProjectPlan": " Sắp xếp dự án ",
   "project.*.sponsor": "Người khởi xướng",
   "project.*.unnamedProject": "Dự án không tên",
+  "project.ProgramPackageBasicFrom.notUploaded": "*尚未上傳",
+  "project.ProgramPackageBasicFrom.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectAdminPage.deletePortfolio": "Delete portfolio",
   "project.ProjectAdminPage.portfolioContent": "Portfolio content",
   "project.ProjectAdminPage.portfolioDescription": "Portfolio description",
@@ -2224,9 +2192,21 @@
   "project.ProjectCollectionTable.author": "Author",
   "project.ProjectCollectionTable.mark": "Mark",
   "project.ProjectCollectionTable.title": "Title",
+  "project.ProjectIntroForm.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
+  "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
+  "project.ProjectIntroForm.notUploaded": "*尚未上傳",
+  "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectPlanAdminModal.deliverables": " Project Deliverables ",
+  "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
+  "project.ProjectPlanAdminModal.isPublished": "是否開賣",
+  "project.ProjectPlanAdminModal.notUploaded": "*尚未上傳",
+  "project.ProjectPlanAdminModal.planDescription": "方案描述",
+  "project.ProjectPlanAdminModal.published": "發售，專案上架後立即開賣",
+  "project.ProjectPlanAdminModal.saveProjectPlan": "儲存方案",
+  "project.ProjectPlanAdminModal.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectPlanAdminModal.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
   "project.ProjectPlanCard.notSale": "Đã bán",
   "project.ProjectPlanCard.onSale": "Được bán",
   "project.ProjectPlanCard.sku": "SKU",
@@ -2378,17 +2358,30 @@
   "questionLibrary.ui.isAnswer": "Đây là câu trả lời chính xác",
   "questionLibrary.ui.sortQuestions": "Sắp xếp câu hỏi",
   "questionLibrary.ui.useZhuYinFont": "Sử dụng Phông chữ Zhuyin",
+  "sale.*.activityTicket": "活動票券",
+  "sale.*.appointmentPlan": "預約",
+  "sale.*.cancel": "取消",
+  "sale.*.card": "會員卡",
+  "sale.*.isRequired": "請輸入{field}",
+  "sale.*.merchandiseSpec": "商品規格",
+  "sale.*.podcastPlan": "廣播頻道",
+  "sale.*.podcastProgram": "廣播",
+  "sale.*.program": "單次課程",
+  "sale.*.programContent": "課程內容",
+  "sale.*.programPackagePlan": "課程組合",
+  "sale.*.programPlan": "課程方案",
+  "sale.*.projectPlan": "專案方案",
   "sale.InvoiceCard.donationCode": "發票捐贈碼",
   "sale.InvoiceCard.invoiceAddress": "發票地址",
   "sale.InvoiceCard.invoiceCarrier": "發票載具",
   "sale.InvoiceCard.invoiceEmail": "聯絡信箱",
   "sale.InvoiceCard.invoiceFailed": "開立失敗 {errorCode}",
-  "sale.InvoiceCard.invoiceIssuedAt": "發票開立時間",
+  "sale.InvoiceCard.invoiceIssuedAt": "Thời gian phát hành hóa đơn",
   "sale.InvoiceCard.invoiceName": "發票姓名",
   "sale.InvoiceCard.invoiceNumber": "發票編號",
   "sale.InvoiceCard.invoicePending": "未開立電子發票",
   "sale.InvoiceCard.invoicePhone": "發票電話",
-  "sale.InvoiceCard.invoiceStatus": "發票狀態",
+  "sale.InvoiceCard.invoiceStatus": " Trạng thái hóa đơn ",
   "sale.InvoiceCard.invoiceSuccess": "開立成功",
   "sale.InvoiceCard.invoiceTarget": "發票對象",
   "sale.InvoiceCard.uniformNumber": "發票統編",
@@ -2404,6 +2397,81 @@
   "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
   "sale.OrderDetailDrawer.otherInfo": "其他資訊",
   "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderExportModal.all": "全部產品",
+  "sale.OrderExportModal.dateRange": "Phạm vi Ngày",
+  "sale.OrderExportModal.exportOrder": "匯出資料",
+  "sale.OrderExportModal.exportOrderDiscount": "折扣明細",
+  "sale.OrderExportModal.exportOrderLog": "匯出總表",
+  "sale.OrderExportModal.exportOrderProduct": "訂單明細",
+  "sale.OrderExportModal.exportPaymentLog": "交易明細",
+  "sale.OrderExportModal.gift": "贈品項目",
+  "sale.OrderExportModal.invoiceAddress": "發票地址",
+  "sale.OrderExportModal.invoiceCarrier": "發票載具",
+  "sale.OrderExportModal.invoiceDonationCode": "發票捐贈碼",
+  "sale.OrderExportModal.invoiceEmail": "發票信箱",
+  "sale.OrderExportModal.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.OrderExportModal.invoiceId": "發票編號",
+  "sale.OrderExportModal.invoiceIssuedAt": "發票開立時間",
+  "sale.OrderExportModal.invoiceName": "發票姓名",
+  "sale.OrderExportModal.invoicePending": "未開立電子發票",
+  "sale.OrderExportModal.invoicePhone": "發票電話",
+  "sale.OrderExportModal.invoiceStatus": "發票狀態",
+  "sale.OrderExportModal.invoiceSuccess": "開立成功",
+  "sale.OrderExportModal.invoiceTarget": "發票對象",
+  "sale.OrderExportModal.invoiceUniformNumber": "發票統編",
+  "sale.OrderExportModal.invoiceUniformTitle": "發票抬頭",
+  "sale.OrderExportModal.memberEmail": " Email Thành viên ",
+  "sale.OrderExportModal.memberName": " Tên Thành viên ",
+  "sale.OrderExportModal.no": "否",
+  "sale.OrderExportModal.orderCategory": "訂單項目",
+  "sale.OrderExportModal.orderCountry": "下單國家",
+  "sale.OrderExportModal.orderCreatedAt": "Thời gian thành lập đơn đặt hàng",
+  "sale.OrderExportModal.orderDeleted": "已刪除",
+  "sale.OrderExportModal.orderDiscountId": "ID giảm giá",
+  "sale.OrderExportModal.orderDiscountName": "Tên Giảm giá",
+  "sale.OrderExportModal.orderDiscountPrice": "Giá Giảm",
+  "sale.OrderExportModal.orderDiscountTotalPrice": " Tổng chiết khấu ",
+  "sale.OrderExportModal.orderExpired": "已失效",
+  "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCreatedDate": "Ngày thành lập",
+  "sale.OrderExportModal.orderLogExecutor": "Người bán chui và lợi nhuận ",
+  "sale.OrderExportModal.orderLogId": " ID đặt hàng ",
+  "sale.OrderExportModal.orderLogPaymentDate": "付款日期",
+  "sale.OrderExportModal.orderLogStatus": "訂單狀態",
+  "sale.OrderExportModal.orderLogTotalPrice": " Tổng đơn hàng ",
+  "sale.OrderExportModal.orderPartialPaid": "部分付款",
+  "sale.OrderExportModal.orderPartialRefund": "部分退款",
+  "sale.OrderExportModal.orderPaying": "付款中",
+  "sale.OrderExportModal.orderProductCount": " Tổng số mặt hàng ",
+  "sale.OrderExportModal.orderProductId": "ID Sản phẩm",
+  "sale.OrderExportModal.orderProductName": " Tên mặt hàng ",
+  "sale.OrderExportModal.orderProductTotalPrice": " Tổng số mặt hàng ",
+  "sale.OrderExportModal.orderRefund": "已退款",
+  "sale.OrderExportModal.orderStatus": " Trạng thái Đơn hàng ",
+  "sale.OrderExportModal.orderSuccess": "已完成",
+  "sale.OrderExportModal.orderUnpaid": "待付款",
+  "sale.OrderExportModal.otherSpecifyCategories": "Other Specify Categories",
+  "sale.OrderExportModal.paymentLogDetails": " Phương thức Thanh toán ",
+  "sale.OrderExportModal.paymentLogGateway": " Kênh giao dịch ",
+  "sale.OrderExportModal.paymentLogNo": " ID giao dịch ",
+  "sale.OrderExportModal.paymentLogPaidAt": "付款時間",
+  "sale.OrderExportModal.productEndedAt": "項目到期時間",
+  "sale.OrderExportModal.productOwner": " Người tạo ",
+  "sale.OrderExportModal.productPrice": " Số lượng mặt hàng ",
+  "sale.OrderExportModal.productQuantity": " Số lượng mặt hàng ",
+  "sale.OrderExportModal.productType": " Danh mục mặt hàng ",
+  "sale.OrderExportModal.recipientAddress": "收件地址",
+  "sale.OrderExportModal.recipientName": "收件人",
+  "sale.OrderExportModal.recipientPhone": "收件電話",
+  "sale.OrderExportModal.send": "寄送",
+  "sale.OrderExportModal.sharingCode": " URL quảng cáo ",
+  "sale.OrderExportModal.sharingNote": " Ghi chú Khuyến mại ",
+  "sale.OrderExportModal.specify": "指定產品",
+  "sale.OrderExportModal.specifyCouponPlan": "指定折價方案",
+  "sale.OrderExportModal.specifyVoucherPlan": "指定兌換方案",
+  "sale.OrderExportModal.timeRange": " Phạm vi Ngày ",
+  "sale.OrderExportModal.unknownType": "未知",
+  "sale.OrderExportModal.yes": "是",
   "sale.OrderOtherInfoCard.country": "國家",
   "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
   "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
@@ -2418,7 +2486,6 @@
   "sale.PaymentCard.paymentNo": "交易編號",
   "sale.PaymentCard.paymentStatus": "交易狀態",
   "sale.PaymentCard.price": "金額",
-  "sale.SaleCollectionAdminCard.cancel": " Hủy ",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": " Mở ",
   "sale.SaleCollectionAdminCard.openEquity": " Open Equity ",
