--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -179,6 +179,7 @@
   "activity.ui.downloadList": "Unduh",
   "activity.ui.participantsList": "Peserta",
   "activity.ui.threshold": "Setidaknya",
+  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Manajemen Aktivitas",
   "admin.AdminMenu.activityAdmin": "Aktivitas",
   "admin.AdminMenu.activityCategory": "Kategori Aktivitas",
