--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -179,6 +179,7 @@
   "activity.ui.downloadList": "Tải xuống",
   "activity.ui.participantsList": "Người tham gia",
   "activity.ui.threshold": "Ít nhất",
+  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Quản lý quản lý",
   "admin.AdminMenu.activityAdmin": "Hoạt động",
   "admin.AdminMenu.activityCategory": "Phân loại hoạt động",
