--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -179,6 +179,7 @@
   "activity.ui.downloadList": "下载名单",
   "activity.ui.participantsList": "参与名单",
   "activity.ui.threshold": "最少",
+  "activity.ui.allCategory": "全部分類",
   "admin.AdminMenu.activities": "活动管理",
   "admin.AdminMenu.activityAdmin": "活动",
   "admin.AdminMenu.activityCategory": "活动分类",
