--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -179,6 +179,7 @@
   "activity.ui.downloadList": "下載名單",
   "activity.ui.participantsList": "參與名單",
   "activity.ui.threshold": "最少",
+  "activity.ui.allCategory": "全部分類",
   "admin.AdminMenu.activities": "活動管理",
   "admin.AdminMenu.activityAdmin": "活動",
   "admin.AdminMenu.activityCategory": "活動分類",
